# atlas-mm

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: benchmark_engine.py  run_simulation.py  run_verification.py  train_rl.py
src/atlas_mm/: __init__.py
src/atlas_mm/agents/: __init__.py  avellaneda_stoikov.py  base.py  rl_agent.py
src/atlas_mm/engine/: __init__.py  matching.py  orderbook.py  orders.py
src/atlas_mm/evaluation/: __init__.py  metrics.py  visualization.py
src/atlas_mm/simulation/: __init__.py  agents_zoo.py  environment.py  flow_generator.py  price_process.py
src/atlas_mm/verification/: __init__.py  properties.py
tests/: test_avellaneda_stoikov.py  test_environment.py  test_environment_reward.py  test_matching.py  test_metrics.py  test_orderbook.py  test_simulation.py  test_verification.py
