[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-mm"
version = "0.1.0"
description = "GPU-Accelerated LOB Simulator with Formally Verified Market Making"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Alessandro Potenza", email = "ap.alessandro.potenza@gmail.com"}]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "gymnasium>=0.29",
    "z3-solver>=4.12",
    "tqdm>=4.66",
    "scipy>=1.11",
]

[project.optional-dependencies]
rl = [
    "stable-baselines3>=2.2",
    "torch>=2.1",
    "tensorboard>=2.15",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
